Обновлена сваггер документация
